# fhir-synth

./: LICENSE  README.md  pyproject.toml
schemas/: fhir-r4-schema.json
src/fhir_synth/: __init__.py  cli.py  fhir_assembler.py  models.py  timeline.py  trends.py  validator.py
src/fhir_synth/backends/: __init__.py  base.py  encounter.py  observation.py  patient.py
src/fhir_synth/scenarios/: ards.py  base.py  cardiac_arrest.py  icu_sepsis.py  normal.py  post_op.py
tests/: test_backends.py  test_cli.py  test_fhir_assembler.py  test_models.py  test_scenarios.py  test_timeline.py  test_trends.py  test_validator.py
